--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Prize Wheel</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>The Prize Wheel</title>
+	<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <div id="content">
-    <div id="wheel">
-      <div id="center">
-      </div>
-    </div>
-  </div>
-  <script src="data.json"></script>
-  <script src="jquery-2.1.3.js"></script>
-  <script src="wheel.js"></script>
-  <link rel="stylesheet" href="styles.css"/>
+	<div id="content">
+		<h1 id="winner">
+			Winner!
+		</h1>
+		<canvas id="wheel" width="500" height="500">
+		</canvas>
+	</div>
+	<script src="data.json"></script>
+	<script src="jquery-2.1.3.js"></script>
+	<script src="wheel.js"></script>
 </body>
 </html>
