--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
 		<h1 id="winner">
 			Winner!
 		</h1>
-		<canvas id="wheel" width="1000" height="1000">
-		</canvas>
+		<div id="wheelContainer">
+			<canvas id="wheel" width="1000" height="1000">
+			</canvas>
+		</div>
 	</div>
 	<script src="data.json"></script>
 	<script src="jquery-2.1.3.js"></script>
