feat(Spin): easing functions and color change

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 			Winner!
 		</h1>
 		<div id="wheelContainer">
-			<canvas id="wheel" width="1000" height="1000">
+			<canvas id="wheel" width="1000" height="1000" moz-opaque>
 			</canvas>
 		</div>
 	</div>
 	<script src="data.json"></script>
-	<script src="jquery-2.1.3.js"></script>
+	<script src="jquery-2.1.3.min.js"></script>
 	<script src="wheel.js"></script>
 </body>
 </html>
